# femSolver

./: .gitignore  CMakeLists.txt  README.md
PYTHON/: LU.py  cholesky.py  csrMatrix.py  mesh.py  randomized_low_rank.py
include/: Mesh.h  TArray.h  Tarray.h  Viewer.h  cube.h  sparseMatrix.h  sphere.h  systemSolve.h  timer.h  vec3.h
include/Matrix/: COOMatrix.h  CSRMatrix.h  FEMatrix.h  Matrix.h  sparseMatrix.h
include/Mesh/: Mesh.h  cube.h  sphere.h
include/linalg/: fem.h  systemSolve.h
include/utils/: FEMdata.h  NavierStokesSolver.h  TArray.h  Viewer.h  timer.h  vec3.h
lib/: CMakeLists.txt
lib/include/Matrix/: COOMatrix.h  CSRMatrix.h  FEMatrix.h  Matrix.h  NSMatrix.h  SKRMatrix.h  diagMatrix.h  normalMatrix.h
lib/include/Mesh/: Mesh.h
lib/include/linalg/: cholesky.h  fem.h  systemSolve.h
lib/include/utils/: FEMdata.h  MultiGrid.h  NavierStokesSolver.h  TArray.h  Viewer.h  vec3.h
lib/src/Matrix/: COOMatrix.cpp  CSRMatrix.cpp  FEMatrix.cpp  SKRMatrix.cpp  diagMatrix.cpp
lib/src/Mesh/: Mesh.cpp
lib/src/linalg/: cholesky.cpp  fem.cpp  systemSolve.cpp
lib/src/utils/: FEMdata.cpp  MultiGrid.cpp  NavierStokesSolver.cpp
shader/: fragment_shader.glsl  vertex_shader.glsl
src/: ploy_cube.py  test.cpp  test_CSR.cpp  test_MG.cpp  test_NS.cpp  test_SKR.cpp  test_TArray.cpp  test_Tarray.cpp  test_cholesky.cpp  test_cube.cpp  test_fem.cpp  test_femdata.cpp  test_glfw.cpp  test_systemSolve.cpp  test_viewer.cpp
